k8s/service.yaml
# LOCUS: service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: visual-engine
spec:
  type: ClusterIP
  selector:
    app: visual-engine
  ports:
    - port: 8001
      targetPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: attribute-tagger
spec:
  type: ClusterIP
  selector:
    app: attribute-tagger
  ports:
    - port: 8004
      targetPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: mlops-exporter
spec:
  type: ClusterIP
  selector:
    app: mlops-exporter
  ports:
    - port: 8003
      targetPort: 8003
